# Z-Viewer

./: AboutWindow.qml  AppIcon.icns  BasicInfo.qml  BasicInfoTag.qml  CMakeLists.txt  CollapsedPart.qml  EditMenu.qml  EntryRow.qml  FileThumb.qml  InfoPanel.qml  Main.qml  README.md  ThumbPanel.qml  ZBorderlessWindow.qml  ZButton.qml  ZButtonIcon.qml  ZSwitch.qml  backend.cpp  backend.h  frontEndModels.cpp  frontEndModels.h  getExif.cpp  getExif.h  main.cpp  platform.h  resource.qrc  thumbImage.cpp  thumbImage.h  windowsShellThumbProvider.cpp  windowsShellThumbProvider.h
LICENSE1.0.0/: LICENSE.txt  README.txt
src/: AboutWindow.qml  BasicInfo.qml  BasicInfoTag.qml  CMakeLists.txt  CollapsedPart.qml  EditMenu.qml  EntryRow.qml  FileThumb.qml  InfoPanel.qml  MacQLThumbnail.mm  Main.qml  ThumbPanel.qml  ZBorderlessWindow.qml  ZButton.qml  ZButtonIcon.qml  ZSwitch.qml  backend.cpp  backend.h  frontEndModels.cpp  frontEndModels.h  getExif.cpp  getExif.h  macThumbProvider.cpp  macThumbProvider.h  main.cpp  resource.qrc  thumbImage.cpp  thumbImage.h  windowsShellThumbProvider.cpp  windowsShellThumbProvider.h
